[gd_scene load_steps=4 format=3 uid="uid://dstis5dhmuqwq"]

[ext_resource type="PackedScene" uid="uid://bvrrb66xybcx5" path="res://Collection/Slots/slot.tscn" id="1_ab4ni"]
[ext_resource type="Script" path="res://Maps/map_1.gd" id="1_kxfop"]
[ext_resource type="Resource" uid="uid://dqakb7eet25d4" path="res://Resources/collection_slot.tres" id="2_mp2oc"]

[node name="Map1" type="Node2D"]
script = ExtResource("1_kxfop")

[node name="Slot1" parent="." instance=ExtResource("1_ab4ni")]
position = Vector2(332, 451)
slot_col_res = ExtResource("2_mp2oc")
nr_slot = "1"

[node name="Slot2" parent="." instance=ExtResource("1_ab4ni")]
position = Vector2(475, 457)
slot_col_res = ExtResource("2_mp2oc")
nr_slot = "2"

[node name="Slot3" parent="." instance=ExtResource("1_ab4ni")]
position = Vector2(619, 454)
slot_col_res = ExtResource("2_mp2oc")
nr_slot = "3"

[node name="Slot4" parent="." instance=ExtResource("1_ab4ni")]
position = Vector2(788, 454)
slot_col_res = ExtResource("2_mp2oc")
nr_slot = "4"

[node name="Eslot1" parent="." instance=ExtResource("1_ab4ni")]
position = Vector2(328, 263)

[node name="Eslot2" parent="." instance=ExtResource("1_ab4ni")]
position = Vector2(473, 256)

[node name="Eslot3" parent="." instance=ExtResource("1_ab4ni")]
position = Vector2(621, 266)

[node name="Eslot4" parent="." instance=ExtResource("1_ab4ni")]
position = Vector2(787, 263)
